--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.12"
 python-dotenv = "^1.0.1"
 groq = "^0.11.0"
+streamlit = "^1.38.0"
+fastapi = {extras = ["standard"], version = "^0.113.0"}
+streamlit-audiorec = "^0.1.3"
 
 
 [build-system]
