--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ groq = "^0.11.0"
 streamlit = "^1.38.0"
 fastapi = {extras = ["standard"], version = "^0.113.0"}
 streamlit-audiorec = "^0.1.3"
+streamlit-chatbox = "^1.1.12.post4"
 
 
 [build-system]
