--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ streamlit = "^1.38.0"
 fastapi = {extras = ["standard"], version = "^0.113.0"}
 streamlit-audiorec = "^0.1.3"
 streamlit-chatbox = "^1.1.12.post4"
+requests = "^2.32.3"
 
 
 [build-system]
